--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,76 @@
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Java
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+*.zip
+*.tar.gz
+*.log
+*.tmp
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Build directories
+/target/
+/build/
+/out/
+/bin/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# Gradle
+.gradle/
+/build/
+/gradle-app.setting
+gradle-wrapper.jar
+
+# Maven
+log/
+dependency-reduced-pom.xml
+release.properties
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+.mvn/repository
+
+# IDEs
+/.idea/
+/*.iml
 *.iml
 *.ipr
+*.iws
+/.classpath
+/.project
+/.settings/
+/.vscode/
 
-### NetBeans ###
+# Eclipse
+.metadata
+.classpath
+.project
+.settings/
+.recommenders
+
+# NetBeans
 /nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+/build/
+nbproject/private/
 
-### VS Code ###
-.vscode/
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+desktop.ini
+
+# Test / coverage
+jacoco.exec
+coverage/
+target/site/
+
+# Environment / secrets
+.env
+.env.local
+*.key
+*.pem
+
+# Misc
+*.swp
+*~
